2023 cleanup